k8/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdicidr
  namespace: production
spec:
  serviceName: "rdicidr-service"
  replicas: 3
  selector:
    matchLabels:
      app: rdicidr
  template:
    metadata:
      labels:
        app: rdicidr
    spec:
      containers:
      - name: rdicidr
        image: rdicidr-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
