k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
  namespace: production
spec:
  selector:
    app: rdicidr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
